# Computer-Grafik-Lab

AsteroidsA1/asteroids/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test  geometry.tcc  geometry_test  geometry_test.cc  main_game  math.h  math_test  physics.h  physics_test  sdl2_renderer.cc
GeometryA1/geometry/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  geometry.h  geometry.tcc  geometry_test  geometry_test.cc  math.tcc  math_test
MathA1/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  math.tcc  math_test  math_test.cc
MathA1/math/: CMakeCache.txt
math/: CMakeCache.txt  Makefile  cmake_install.cmake  math.cc  math.h  math.tcc  math_test  math_test.cc
